Revision history for Perl extension Math::BigInt::FastCalc.

2011-09-04 0.30 pjacklam
 * Math::BigInt::FastCalc now requires Math::BigInt v1.997 (Peter John Acklam).
 * Include "^MYMETA\.(yml|json)\z" in MANIFEST.SKIP. Whereas META.* are
   generated by the distribution author at packaging time, MYMETA.* are
   generated by the end user at configure time after any dynamic
   dependencies are known. (Peter John Acklam)
 * Updated common test files from the Math::BigInt distribution. (Peter
   John Acklam)

2011-07-09 0.29 rafl (7560 tests)
  * Synchronise with blead perl.
    + Reduce object code size significantly through PERL_NO_GET_CONTEXT.

2011-02-26 0.28 pjacklam (7560 tests)
  * Sync codebases (CPAN vs. blead): include t/mbi_rand.t from blead,
    fix typos in FastCalc.xs and t/bigintfc.t (Peter John Acklam).
  * Remove redundant Math::BigInt::FastCalc version info from diagnostic
    output of 01load.t (Peter John Acklam).

2011-02-26 0.27 pjacklam (7560 tests)
  * Add Math::BigInt::Calc version information to diagnostics output of
    01load.t. This is useful for debugging, since Math::BigInt::FastCalc
    relies heavily on Math::BigInt::Calc (Peter John Acklam).
  * Change bigintpm.inc to reflect recent changes in the Math::BigInt
    distribution (Peter John Acklam).

2011-02-08 0.26 pjacklam (7560 tests)
  * Add Perl v5.6 compatibility code to FastCalc.xs (RT #63859)
    (Peter John Acklam).
  * Add 00sig.t for testing SIGNATURE, and 01load.t for basic module loading
    and giving diagnostics useful for bug tracking (Peter John Acklam).
  * Rename pod.t to 02pod.t and pod_cov.t to 03podcov.t and use more generic
    code (Peter John Acklam).

2011-02-06 0.251 pjacklam (7558 tests)
  * Add requirement Math::BigInt version 1.991 (Peter John Acklam).

2011-02-05 0.25 pjacklam (7558 tests)
  * Remove _new() from XS code and use _new() in Math::BigInt::Calc
    instead. The XS _new() doesn't handle integers that are too large to